# Renesas-IRremote

./: .cproject  .gitignore  .project  .secure_azone  .secure_rzone  .secure_xml  AGENTS.md  APP_PROTOCOL.md  CMakeLists.txt  CMakePresets.json  CMakeProject.json  Config.cmake  README.md  Renesas_IRremote.code-workspace  bsp_linker_info.h  configuration.xml  fsp_gen.ld  memory_regions.ld  pyocd.yaml  ra_cfg.txt  vcpkg-configuration.json
.theia/: launch.json
cmake/: GeneratedCfg.cmake  GeneratedSrc.cmake  gcc.cmake  prebuild.cmake
ra/fsp/inc/: fsp_features.h  fsp_version.h
ra/fsp/inc/api/: bsp_api.h  fsp_common_api.h  r_external_irq_api.h  r_ioport_api.h  r_spi_api.h  r_timer_api.h  r_transfer_api.h  r_uart_api.h
ra/fsp/inc/instances/: r_gpt.h  r_icu.h  r_ioport.h  r_sci_uart.h  r_spi.h
ra/fsp/src/bsp/cmsis/Device/RENESAS/Include/: R7FA4M2AD.h  renesas.h  system.h
ra/fsp/src/bsp/cmsis/Device/RENESAS/Source/: startup.c  system.c
ra/fsp/src/bsp/mcu/all/: bsp_clocks.c  bsp_clocks.h  bsp_common.c  bsp_common.h  bsp_compiler_support.h  bsp_delay.c  bsp_delay.h  bsp_exceptions.h  bsp_group_irq.c  bsp_group_irq.h  bsp_guard.c  bsp_guard.h  bsp_io.c  bsp_io.h  bsp_ipc.c  bsp_ipc.h  bsp_irq.c  bsp_irq.h  bsp_macl.c  bsp_macl.h  bsp_mcu_api.h  bsp_mmf.h  bsp_module_stop.h  bsp_ospi_b.c  bsp_ospi_b.h  bsp_register_protection.c  bsp_register_protection.h  bsp_sbrk.c  bsp_sdram.c  bsp_sdram.h  bsp_security.c  bsp_security.h  bsp_tfu.h
ra/fsp/src/bsp/mcu/ra4m2/: bsp_elc.h  bsp_feature.h  bsp_linker.c  bsp_mcu_info.h  bsp_peripheral.h
ra/fsp/src/r_gpt/: r_gpt.c
ra/fsp/src/r_icu/: r_icu.c
ra/fsp/src/r_ioport/: r_ioport.c
ra/fsp/src/r_sci_uart/: r_sci_uart.c
ra/fsp/src/r_spi/: r_spi.c
ra_cfg/fsp_cfg/: r_spi_cfg.h
ra_cfg/fsp_cfg/bsp/: bsp_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_pin_cfg.h
ra_gen/: bsp_clock_cfg.h  common_data.c  common_data.h  hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
src/: hal_entry.cpp  hal_warmstart.c
src/app/: aircon_ir_service.cpp  aircon_ir_service.h  app_board_config.h  app_json.cpp  app_json.h  button_panel.cpp  button_panel.h  esp_at_transport.cpp  esp_at_transport.h  local_ui.cpp  local_ui.h  oled_display.cpp  oled_display.h  ra_sci9_uart.cpp  ra_sci9_uart.h  remote_controller.cpp  remote_controller.h
src/ir_ra4m2/: Arduino.cpp  Arduino.h  IRrecv_RA4M2.cpp  IRsend_RA4M2.cpp  ir_ra4m2_gpt_carrier.cpp  ir_ra4m2_gpt_carrier.h  newlib_stubs.c
